# FCI_3D_Helmholtz

./: .gitignore  README.md  pyproject.toml
Matlab/: main.m
examples/: generate_grf.py  generate_random_step_training_data.py  run_operator_smoke.py  solve_grf_gmres.py  solve_grf_helmholtz.py  train_shifted_surrogate.py
jax_helmholtz/: __init__.py  fast_spectral.py  fci.py  gmres.py  low_frequency.py  operators.py  polynomial.py  random_fields.py  setup.py  surrogate.py  training_data.py
tests/: test_operators.py
